--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -42,25 +42,25 @@ services:
       - pdf-network
 
   kafka:
-    image: bitnami/kafka:3.6
+    image: apache/kafka:3.7.0
     container_name: pdf-kafka
     environment:
-      - KAFKA_CFG_NODE_ID=0
-      - KAFKA_CFG_PROCESS_ROLES=controller,broker
-      - KAFKA_CFG_CONTROLLER_QUORUM_VOTERS=0@kafka:9093
-      - KAFKA_CFG_LISTENERS=PLAINTEXT://:9092,CONTROLLER://:9093,EXTERNAL://:9094
-      - KAFKA_CFG_ADVERTISED_LISTENERS=PLAINTEXT://kafka:9092,EXTERNAL://localhost:9094
-      - KAFKA_CFG_LISTENER_SECURITY_PROTOCOL_MAP=CONTROLLER:PLAINTEXT,PLAINTEXT:PLAINTEXT,EXTERNAL:PLAINTEXT
-      - KAFKA_CFG_CONTROLLER_LISTENER_NAMES=CONTROLLER
-      - KAFKA_CFG_INTER_BROKER_LISTENER_NAME=PLAINTEXT
-      - KAFKA_CFG_AUTO_CREATE_TOPICS_ENABLE=true
+      - KAFKA_NODE_ID=0
+      - KAFKA_PROCESS_ROLES=controller,broker
+      - KAFKA_CONTROLLER_QUORUM_VOTERS=0@kafka:9093
+      - KAFKA_LISTENERS=PLAINTEXT://:9092,CONTROLLER://:9093,EXTERNAL://:9094
+      - KAFKA_ADVERTISED_LISTENERS=PLAINTEXT://kafka:9092,EXTERNAL://localhost:9094
+      - KAFKA_LISTENER_SECURITY_PROTOCOL_MAP=CONTROLLER:PLAINTEXT,PLAINTEXT:PLAINTEXT,EXTERNAL:PLAINTEXT
+      - KAFKA_CONTROLLER_LISTENER_NAMES=CONTROLLER
+      - KAFKA_INTER_BROKER_LISTENER_NAME=PLAINTEXT
+      - KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR=1
     ports:
       - "9092:9092"
       - "9094:9094"
     volumes:
-      - kafka_data:/bitnami/kafka
+      - kafka_data:/var/lib/kafka/data
     healthcheck:
-      test: ["CMD-SHELL", "kafka-topics.sh --bootstrap-server localhost:9092 --list"]
+      test: ["CMD-SHELL", "/opt/kafka/bin/kafka-topics.sh --bootstrap-server localhost:9092 --list || exit 1"]
       interval: 30s
       timeout: 10s
       retries: 5
@@ -93,8 +93,8 @@ services:
 
   gateway-service:
     build:
-      context: ./backend/gateway-service
-      dockerfile: Dockerfile
+      context: ./backend
+      dockerfile: gateway-service/Dockerfile
     container_name: pdf-gateway
     environment:
       - SPRING_PROFILES_ACTIVE=docker
@@ -112,8 +112,8 @@ services:
 
   auth-service:
     build:
-      context: ./backend/auth-service
-      dockerfile: Dockerfile
+      context: ./backend
+      dockerfile: auth-service/Dockerfile
     container_name: pdf-auth
     environment:
       - SPRING_PROFILES_ACTIVE=docker
@@ -133,8 +133,8 @@ services:
 
   pdf-core-service:
     build:
-      context: ./backend/pdf-core-service
-      dockerfile: Dockerfile
+      context: ./backend
+      dockerfile: pdf-core-service/Dockerfile
     container_name: pdf-core
     environment:
       - SPRING_PROFILES_ACTIVE=docker
@@ -155,8 +155,8 @@ services:
 
   storage-service:
     build:
-      context: ./backend/storage-service
-      dockerfile: Dockerfile
+      context: ./backend
+      dockerfile: storage-service/Dockerfile
     container_name: pdf-storage
     environment:
       - SPRING_PROFILES_ACTIVE=docker
